test/spec_vectors/load/fail/module_16.wat
(module (memory 1) (func $load8_u_i32 (i32.load8_u (i32.const 0))))